--- a/HomeApps/Views/Shared/_AdminLayout.cshtml
+++ b/HomeApps/Views/Shared/_AdminLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gas App</title>
+    <title>Admin Page</title>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
