--- a/HomeApps/Views/Admin/AddSchema.cshtml
+++ b/HomeApps/Views/Admin/AddSchema.cshtml
@@ -1,9 +1,30 @@
-﻿
+﻿@model IList<string>
+
 @{
     ViewBag.Title = "AddSchema";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2></h2>
+<h2>AddSchema</h2>
 
-<div> @Html.ActionLink("Add Schema", "AddSchema", "Admin", null, new { })</div>
 
+@using (Html.BeginForm())
+{
+    @Html.DropDownList("Schema", (SelectList)ViewBag.Schema, htmlAttributes: new { @id = "Schema", @class = "form-control" })
+    @Html.DropDownList("UserID", (SelectList)ViewBag.People, htmlAttributes: new { @id = "UserID", @class = "form-control" })
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+
+    
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
