--- a/HomeApps/Views/CameraModels/Create.cshtml
+++ b/HomeApps/Views/CameraModels/Create.cshtml
@@ -1,165 +1,79 @@
-﻿@model HomeApps.ModelPeople
+﻿@model HomeApps.CameraModel
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/PhotoCRM.cshtml";
+    Layout = "~/Views/Shared/_CameraModels.cshtml";
 }
 
 <h2>Create</h2>
 
-@using (Html.BeginForm("Create",
-                        "CameraModels",
-                        FormMethod.Post, new { enctype = "multipart/form-data" } ))
+
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-<div class="form-horizontal">
-    <h4>Model</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-    <div class="form-group">
-        @Html.Label("First Name", htmlAttributes: new { @class = "control -label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <h4>CameraModel</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.CameraModelName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CameraModelName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CameraModelName, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("Last Name", htmlAttributes: new { @class = "control -label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.CameraModelGender, "CameraModelGender", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("CameraModelGender", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CameraModelGender, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.AllNudes, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.AllNudes)
+                    @Html.ValidationMessageFor(model => model.AllNudes, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("All Nudes", htmlAttributes: new { @class = "control -label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.AllNudes)
-                @Html.ValidationMessageFor(model => model.AllNudes, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.AllBonjour, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.AllBonjour)
+                    @Html.ValidationMessageFor(model => model.AllBonjour, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.AllTFP, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.AllTFP)
+                    @Html.ValidationMessageFor(model => model.AllTFP, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
-
-    <div class="form-group">
-        @Html.Label("All Boudoir", htmlAttributes: new { @class = "control -label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.AllBoudoir)
-                @Html.ValidationMessageFor(model => model.AllBoudoir, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("All Erotica", htmlAttributes: new { @class = "control -label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.AllErotica)
-                @Html.ValidationMessageFor(model => model.AllErotica, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Phone Number", htmlAttributes: new { @class = "control -label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-
-        @Html.Label("Profile File")
-
-        <div class="col-md-10">
-            <input asp-for="ImageFile" accept="image/*" />
-
-
-            <input type="file" name="file" id="file" />
-        </div>
-    </div>
-
-
-    <div class="form-group">
-        <span class="col-md-1"> @Html.Label("Social Site") </span>
-        <div id="SocialSitesArea">
-            <div id="SocialSitesCopy">
-                <span style="float:left;padding-right:10px">
-                    @Html.DropDownList("ModelSocialSites[X].SocialSiteID", (SelectList)ViewBag.SocialSites,
-                            htmlAttributes: new { @id = "ModelSocialSites[X].SocialSiteID", @class = "form-control" })
-                </span>
-
-                <span style="float:left">
-                    @Html.TextBox("ModelSocialSites[X].URL")
-                </span>
-                <br /> <br />
-            </div>
-           
-        </div>
-    </div>
-
-
-</div>
-
-    <div style="margin-left:10px">
-        <a style="margin: 10px 0;" href="javascript:addRow();">Add Other Site</a>
-    </div>
-
-    <div class="form-group" style="margin-top: 30px">
-        @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
-
 }
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-
-<script>
-    var CurrentActionGroup = 0;
-
-    $(function () {
-        AddNewAction();
-    });
-
-
-    function AddNewAction() {
-        var data = $("#SocialSitesCopy").html().replaceAll('X', CurrentActionGroup);
-        var man = $("#SocialSitesArea");
-        man.append(data);
-
-        CurrentActionGroup++;
-    }
-</script>
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
