--- a/HomeApps/Views/Home/AppList.cshtml
+++ b/HomeApps/Views/Home/AppList.cshtml
@@ -11,7 +11,7 @@
 }
 @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Models").Equals(true))
 {
-    <div>@Html.ActionLink("Models", "Index", "ModelPeoples", null, new { })</div>
+    <div>@Html.ActionLink("Models", "Index", "CameraModels/Index", null, new { })</div>
     <br />
 }
 
@@ -24,6 +24,22 @@
 @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Grocery").Equals(true))
 {
     <div>@Html.ActionLink("Grocery", "Index", "Grocery", null, new { })</div>
+    <br />
 }
+
+
+@if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("WeightTrackers").Equals(true))
+{
+    <div>@Html.ActionLink("Weight", "Index", "WeightTrackers", null, new { })</div>
+    <br />
+}
+
+@if (currentuser.IsAdmin)
+{
+    <div>@Html.ActionLink("Admin", "Index", "Admin", null, new { })</div>
+    <br />
+}
+
+
 
 
