Add notes to weight Tracking.

--- a/HomeApps/Views/WeightTrackers/Index.cshtml
+++ b/HomeApps/Views/WeightTrackers/Index.cshtml
@@ -10,7 +10,7 @@
 <h2>Weight For @Model.FirstName</h2>
 <br />
 
-<div>In the last 30 days your max weight was <b>@Model.MaxWeight</b> and min weight was <b>@Model.MiniWeight</b></div>
+<div>In the last 30 days your max weight was <b>@Model.MaxWeight</b>,  min weight was <b>@Model.MiniWeight</b> and avg is <b>@Model.AvgWeight</b></div>
 
 <br />
 <p>
