--- a/HomeApps/Views/WeightTrackers/Edit.cshtml
+++ b/HomeApps/Views/WeightTrackers/Edit.cshtml
@@ -17,6 +17,7 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.WeightID)
+    @Html.HiddenFor(model => model.UserID)
 
     <div class="form-group">
         @Html.LabelFor(model => model.WeightAmout, htmlAttributes: new { @class = "control-label col-md-2" })
