Add notes to Mate tracker and changed name in app list.

--- a/HomeApps/Views/Home/AppList.cshtml
+++ b/HomeApps/Views/Home/AppList.cshtml
@@ -17,7 +17,7 @@
 
 @if (currentuser.IsAdmin || currentuser.UsersSchema.Contains("Event").Equals(true))
 {
-    <div>@Html.ActionLink("The Event", "Index", "TheEvents/Index", null, new { })</div>
+    <div>@Html.ActionLink("Mate Tracker", "Index", "TheEvents/Index", null, new { })</div>
     <br />
 }
 
