--- a/HomeApps/Views/GroceriesItems/Delete.cshtml
+++ b/HomeApps/Views/GroceriesItems/Delete.cshtml
@@ -1,31 +1,31 @@
-﻿@model HomeApps.Store
+﻿@model HomeApps.Item
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_GrocerieLayouts.cshtml";
 }
 
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Store</h4>
+    <h4>Item</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.ItemName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.ItemName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Deleted)
+            @Html.DisplayNameFor(model => model.IsDeleted)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Deleted)
+            @Html.DisplayFor(model => model.IsDeleted)
         </dd>
 
     </dl>
