--- a/HomeApps/Views/GroceriesItemLists/ShowAllItems.cshtml
+++ b/HomeApps/Views/GroceriesItemLists/ShowAllItems.cshtml
@@ -1,23 +1,21 @@
-﻿@model IEnumerable<HomeApps.ItemList>
+﻿@model List<ItemList>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_GrocerieLayouts.cshtml";
-    int colorCounter = 0;
-    string color = string.Empty;
 }
 
-<h2>Items Needed</h2>
+<h2>All Items Needed</h2>
 
-<p>
-    @Html.ActionLink("Add Item", "Create")
-</p>
 
 <table id="ItemList" class="display">
     <thead>
         <tr>
             <th>
                 @Html.DisplayName("Items")
+            </th>
+            <th>
+                @Html.DisplayName("Got Date")
             </th>
             <th>
                 @Html.DisplayName("StoreName")
@@ -28,39 +26,33 @@
 
     <tbody>
         @foreach (var item in Model)
-        {
-
-            switch (colorCounter)
-            {
-                case 0:
-                    color = "lightyellow";
-                    colorCounter = 1;
-                    break;
-                case 1:
-                    color = "lightgrey";
-                    colorCounter = 0;
-                    break;
-
-            }
+        {  
 
             <tr id="FullItem{@item.ItemListID}">
-                <div class="row item" style="background-color: @color;border-width:1px;border-style:solid; text-align:center">
+                <div class="row item" style="background-color: border-width:1px;border-style:solid; text-align:center">
                 <td>
                     <span class="got-link" data-request-url="@Url.Action("GotItem", "GroceriesItems")" id=@item.ItemListID>
 
                         @if (item.NumberOfItems != null)
-                        {
-                            <span>@item.NumberOfItems - </span>
-                        }
-                        @if(item.SizeType?.SizeTypeName != null)
-                        {
-                            <span>@item.SizeType.SizeTypeName of</span>
-                        }
-                        @Html.DisplayFor(modelItem => item.Item.ItemName)
+                {
+                    <span>@item.NumberOfItems - </span>
+                }
+                @if (item.SizeType?.SizeTypeName != null)
+                {
+                    <span>@item.SizeType.SizeTypeName of</span>
+                }
+                        @item.Item.ItemName
                     </span>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Store.StoreName)
+                    @if(item.DateGot.HasValue) {
+                        @item.DateGot.Value.ToShortDateString()
+                    }
+
+                </td>
+                <td>
+                    @if (item.Store != null) {
+                   @item.Store.StoreName}
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.ItemListID })
