Add order by name and updated some Admin stuff.

--- a/HomeApps/Views/Shared/_AdminLayout.cshtml
+++ b/HomeApps/Views/Shared/_AdminLayout.cshtml
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Schemas", "Index", "Schemas", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Schemas", "AddSchema", "Admin", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Users", "Index", "Users", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Users", "AllUsers", "Admin", null, new { @class = "nav-link" })
                 </li>
                 @*<li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
