--- a/HomeApps/Views/Admin/AddSchema.cshtml
+++ b/HomeApps/Views/Admin/AddSchema.cshtml
@@ -10,16 +10,26 @@
 
 @using (Html.BeginForm())
 {
-    @Html.DropDownList("Schema", (SelectList)ViewBag.Schema, htmlAttributes: new { @id = "Schema", @class = "form-control" })
-    @Html.DropDownList("UserID", (SelectList)ViewBag.People, htmlAttributes: new { @id = "UserID", @class = "form-control" })
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+    <div>
+        <div>
+            @Html.Label("Schema Name:")
+            @Html.DropDownList("Schema", (SelectList)ViewBag.Schema, htmlAttributes: new { @id = "Schema", @class = "form-control" })
+        </div>
+        <br />
+        <div>
+            @Html.Label("Username")
+            @Html.DropDownList("UserID", (SelectList)ViewBag.People, htmlAttributes: new { @id = "UserID", @class = "form-control" })
         </div>
     </div>
 
-    
+    <br/>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-primary" />
+        </div>
+    </div>
+   
+
 }
 
 <div>
