Fix some extra code and fix show all times datatable sync.

--- a/HomeApps/Views/GroceriesItemLists/Index.cshtml
+++ b/HomeApps/Views/GroceriesItemLists/Index.cshtml
@@ -29,7 +29,7 @@
         {
 
             <tr id="FullItem{@item.ItemListID}">
-                <div class="row item" style="background-color: border-width:1px;border-style:solid; text-align:center">
+                <div>
                 <td>
                     <span class="got-link" data-request-url="@Url.Action("GotItem", "GroceriesItems")" id=@item.ItemListID>
 
@@ -52,7 +52,7 @@
                     }
                     @Html.ActionLink("Edit", "Edit", new { id = item.ItemListID })
                 </td>
-                </div>
+
             </tr>
         }
     </tbody>
