--- a/HomeApps/Views/Shared/_GrocerieLayouts.cshtml
+++ b/HomeApps/Views/Shared/_GrocerieLayouts.cshtml
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Shans's Home Apps</title>
+    <title>Our Groceries</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <script src="~/Scripts/bootstrap.min.js"></script>
