--- a/HomeApps/Views/Home/AppList.cshtml
+++ b/HomeApps/Views/Home/AppList.cshtml
@@ -40,6 +40,16 @@
     <br />
 }
 
+<br />
 
+<h2>Old Links</h2>
+<br/>
+
+<p>
+    <a href="http://dfwdino.dyndns.org/SDNWebApps/Baby/DoneThings/Index">Kids Link</a>
+</p>
+<p>
+    <a href="http://dfwdino.dyndns.org/SDNWebApps/GroceryList/Home/Index">Groceries Link</a>
+</p>
 
 
