--- a/HomeApps/Views/GroceriesItems/Create.cshtml
+++ b/HomeApps/Views/GroceriesItems/Create.cshtml
@@ -15,6 +15,13 @@
     <div class="form-horizontal">
         <h4>Item</h4>
         <hr />
+
+        @if(ViewBag.CreatedItem == true)
+                {
+                    <div style="color:red">Item Added.</div>
+            Model.ItemName = string.Empty;
+        }
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.Label("Item Name", htmlAttributes: new { @class = "control-label col-md-2" })
